audit(java): closes the section — a rate limiter that refills 0 tokens below 1,000 tps
Units 139-141, all 13 java/case_studies files. 214 claims, 116 findings — the largest batch
of the session. java is now 20/20 units complete.

THE PINNING NARRATIVE WAS INVERTED IN FOUR MORE FILES, in three different shapes. Units
157/158 found it in the modules; the prompt for this batch said to expect it here, and it
was:
  - design_snowflake_id_generator_java Pitfall 4 had BOTH cause and fix wrong: "synchronized
    nextId() pinned carrier threads, fix: replace with ReentrantLock". Post-JEP 491 the real
    hazard is the BUSY-SPIN in waitForNextMs — a spinning virtual thread never reaches a
    yield point, so it cannot unmount whatever lock you use. ReentrantLock changes nothing;
    the fix is Thread.sleep/parkNanos.
  - backpressure_and_bounded_resources Q14 and design_event_bus §10 rewritten around native
    frames (JNI, FFM downcalls). jdk.VirtualThreadPinned survives JEP 491 and now fires on
    native-frame blocking.
  - case_studies/README claimed a Java 17+ target with "no raw synchronized blocks"; now
    Java 25 baseline, stating that synchronized no longer pins.
  Also ScopedValue as "Java 21+" (final in 25) and StructuredTaskScope as "Java 21+" (still
  preview, JEP 525).

A RATE LIMITER THAT NEVER REFILLS. SCALE = 1_000_000 with
refillRatePerNano = tps * SCALE / 1e9 truncates to 0 in integer arithmetic for EVERY rate
below 1,000 tokens/sec — including the file's own 11.6 tokens/sec worked example. The bucket
drains once and rejects forever. Re-derived independently here on javac 23.0.2:

    tps    SCALE=1e6    SCALE=1e9
    11     0            11
    100    0            100
    999    0            999
    1000   1            1000

A Q&A also asserted 1 x 10^6 / 10^9 = 1; it is 0. Fixed to SCALE = 1e9 and verified: burst
100 drains, exactly 11 tokens after 1s idle, 50/50 granted under 16 threads — the old
get()/set() refill was erasing concurrent decrements too.
